--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
-[context."master"]
-  command = "sleep 1200 & env && sleep 20 && echo 'build script completed but background process running for +20 minutes now'"
+[context."big-file"]
+  command = "build sh"
   base = ""
   publish = ""
